Profile picture updated

--- a/bgru.html
+++ b/bgru.html
@@ -60,11 +60,9 @@
                     Audio examples
                 </h3>
                 <h4>
-                    Validation set
+                    5. Frogs
                 </h4>
-                <p>
-                    The audio examples are in groups of three. The first consists of an original, in-tune performance. The second is the de-tuned version that is input to the program. The third demonstrates the output of the program after applying the predicted corrections. The artifacts in the shifted audio are due to the use of a simple phase vocoder for pitch shifting and to the notes were not always parsed correctly. For example, a single note might be split into two different sections that are de-tuned independently, creating an unnatural discontinuity.
-                </p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nzyFgRO3WRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </article>
