Profile picture updated

--- a/bgru.html
+++ b/bgru.html
@@ -59,6 +59,19 @@
                 <h3>
                     Audio examples
                 </h3>
+
+                <h4>
+                    1. Keyboards
+                </h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PPKxIYbctg4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4>
+                    2. Chips
+                </h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RDTDgbnVg0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4>
+                    3. Motorcycle 
+                </h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EjS1paV2Cnw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h4>
                     4. Casino
                 </h4>
