BLSH portion editted

--- a/research.html
+++ b/research.html
@@ -23,17 +23,18 @@
    </td>
   </tr>
 
-  <tr>
+  <tr valign="top">
   <td>
-    <div class="smallhdr"><a target="blank" href="BLSH_Paper.pdf">Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
-	<div class="researchhdr">
-	 	S. Kim, H. Yang, M. Kim (In Submission)
-	</div>
+    <div class="smallhdr">Boosted Locality Sensitive Hashing<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="txt">
-        Designed adaptive boosting approach using logistic regressors as weak learners to learn locality sensitive hash codes that represent audio spectra efficiently, and used kNN procedure on hashed space for source separation.
+        Sunwoo Kim, Mrinmoy Maity, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in submission of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2020.
+	</div>
+	<div class="researchhdr">
+    <a target="blank" href="blsh.html">Paper and audio examples</a>
 	</div>
    </td>
   </tr>
+
 
   <tr>
   <td>
