BLSH portion editted

--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
   <td>
     <div class="smallhdr">Boosted Locality Sensitive Hashing<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="txt">
-        Sunwoo Kim, Mrinmoy Maity, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in submission of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2020.
+        Sunwoo Kim, Haici Yang, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in submission of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2020.
 	</div>
 	<div class="researchhdr">
     <a target="blank" href="blsh.html">Paper and audio examples</a>
