BLSH portion editted

--- a/blsh.html
+++ b/blsh.html
@@ -42,7 +42,7 @@
                 <table>
 	<tbody><tr>
 		<td class="text-center">
-			<img src="knn_wta.pdf" alt="" width="750" height="400">
+			<img src="knnproc.png" alt="" width="750" height="400">
 		</td>
 		<td class="text-center">
 			<img src="blshres.png" alt="" width="750" height="400">
