BLSH portion editted

--- a/blsh.html
+++ b/blsh.html
@@ -51,9 +51,13 @@
 	<tr>
 		<td>
 			<small><b>Fig 1.</b> 
-                Performance in SDR on incremental levels of quantization &pi;. 
+                KNN-based source separation process using LSH hash codes.
             </small>
-
+		</td>
+		<td>
+			<small><b>Fig 2.</b> 
+                Self-affinity matrices of varying L hash codes and original time-frequency bins. 
+            </small>
 		</td>
 	</tr>
 </tbody></table>
