BLSH portion editted

--- a/blsh.html
+++ b/blsh.html
@@ -84,7 +84,7 @@
             
             <div class="cell small-4">    
                 <div class="maudio">      
-                    <audio src="images/autotuner_examples/test_mix_1.mp3" initaudio="false"></audio>      
+                    <audio src="blsh_demo/sample0_orig.wav" initaudio="false"></audio>      
                     <div class="audio-control">          
                         <a href="javascript:;" class="fast-reverse"></a>          
                         <a href="javascript:;" class="play"></a>          
@@ -94,7 +94,7 @@
                         </div>          
                         <div class="time-keep">              
                             <span class="current-time">00:00</span> / 
-                            <span class="duration">00:20</span>          
+                            <span class="duration">00:04</span>          
                         </div>          
                         <a class="mute"></a>          
                         <div class="volume-bar">              
