--- a/blsh.html
+++ b/blsh.html
@@ -82,6 +82,11 @@
             <div class="cell small-4"><strong>Noisy Mixture (input)</strong></div>
             <div class="cell small-4"><strong>Denoised (output)</strong></div>
             
+            <audio controls>
+            <source src='blsh_demo/sample0_orig.wav' type='audio/wav'>
+            Your browser does not support the audio tag.
+            </audio>
+
             <div class="cell small-4">    
                 <div class="maudio">      
                     <audio src="blsh_demo/sample0_orig.wav" initaudio="false"></audio>      
