Teaching tab updated

--- a/teaching.html
+++ b/teaching.html
@@ -16,12 +16,9 @@
 	<div class="txt">
 		Term time: Check Canvas
 	</div>
-    <div class="smallhdr">Current teaching</div>
-	<div class="txt">
-		<b>ENGR 511 Machine Learning for Signal Processing</b> <br>
-	</div>
     <div class="smallhdr">Past teaching</div>
 	<div class="txt">
+	  ENGR 511 Machine Learning for Signal Processing <br>
 	  CSCI-P565 Software Engineering I<br>
 	  ENGR-E599 Deep Learning Systems<br>
 	</div>
