--- a/research.html
+++ b/research.html
@@ -38,12 +38,12 @@
 
   <tr>
   <td>
-    <div class="smallhdr"><a target="blank" href="WTANNSS_Paper.pdf">Nearest Neighbor Search-Based Bitwise Source Separation Using Discriminant Winner-Take-All Hashing</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
-	<div class="researchhdr">
-	 	S. Kim, M. Kim (2019, April)
-	</div>
+    <div class="smallhdr">Discriminant Winner-Take-All Hashing<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="txt">
-		Iteration free bitwise source separation algorithm based on Winner-Take-All hash codes. Submitted for Publication.
+        Sunwoo Kim, and Minje Kim. "Nearest Neighbor Search-Based Bitwise Source Separation Using Discriminant Winner-Take-All Hashing." arXiv preprint arXiv:1908.09799 (2019).
+	</div>
+	<div class="researchhdr">
+    <a target="blank" href="wta.html">Link to paper</a>
 	</div>
    </td>
   </tr>
