research page updated

--- a/research.html
+++ b/research.html
@@ -18,19 +18,7 @@
         Sunwoo Kim, Mrinmoy Maity, and Minje Kim (2019), "Incremental Binarization On Recurrent Neural Networks for Single-Channel Source Separation," in Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Brighton, UK, May 12-17, 2019.
 	</div>
 	<div class="researchhdr">
-    <a target="blank" href="bgru.html">Paper and audio examples</a>
-	</div>
-   </td>
-  </tr>
-
-  <tr valign="top">
-  <td>
-    <div class="smallhdr">Boosted Locality Sensitive Hashing<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
-	<div class="txt">
-        Sunwoo Kim, Haici Yang, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in submission of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2020.
-	</div>
-	<div class="researchhdr">
-    <a target="blank" href="blsh.html">Paper and audio examples</a>
+    <a target="blank" href="bgru.html">Link to paper, code, and audio examples</a>
 	</div>
    </td>
   </tr>
@@ -44,6 +32,19 @@
 	</div>
 	<div class="researchhdr">
     <a target="blank" href="wta.html">Link to paper</a>
+	</div>
+   </td>
+  </tr>
+
+
+  <tr valign="top">
+  <td>
+    <div class="smallhdr">Boosted Locality Sensitive Hashing<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+	<div class="txt">
+        Sunwoo Kim, Haici Yang, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in submission of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2020.
+	</div>
+	<div class="researchhdr">
+    <a target="blank" href="blsh.html">Link to paper, code, and audio examples</a>
 	</div>
    </td>
   </tr>
