Blsh page update

--- a/blsh.html
+++ b/blsh.html
@@ -82,9 +82,7 @@
             <div class="cell small-4"><strong>Noisy Mixture (input)</strong></div>
             <div class="cell small-4"><strong>Denoised (output)</strong></div>
             
-            <audio controls>
-            <source src='blsh_demo/sample1_orig.wav' type='audio/wav'>
-            </audio>
+            <audio src='blsh_demo/sample1_orig.wav' preload></audio>
         </div>
     </article>
 
