--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
   <td>
     <div class="smallhdr">Boosted Locality Sensitive Hashing<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="txt">
-        Sunwoo Kim, Haici Yang, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in submission of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2020.
+        Sunwoo Kim, Haici Yang, and Minje Kim (2019), "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation," in Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Barcelona, Spain, May 4-8, 2020.
 	</div>
 	<div class="researchhdr">
     <a target="blank" href="blsh.html">Link to paper, code, and audio examples</a>
