Trying audio again with different head

--- a/blsh.html
+++ b/blsh.html
@@ -1,4 +1,4 @@
-<html><head>
+<!-- <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Bitwise Recurrent Network</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.5.3/css/foundation.min.css">
@@ -16,6 +16,18 @@
         }
     </style>
 </head>
+-->
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>CSS</title>
+<link href="personal website.css" rel="stylesheet" type="text/css" />
+</head>
+
+
 <body>
 
     <article class="grid-container">
