--- a/blsh.html
+++ b/blsh.html
@@ -22,9 +22,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CSS</title>
-<link href="personal website.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Bitwise Recurrent Network</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.5.3/css/foundation.min.css">
+<link rel="stylesheet" type="text/css" href="./css/maudio.css">
 </head>
 
 <body>
