Alignment of wavfile

--- a/blsh.html
+++ b/blsh.html
@@ -93,10 +93,11 @@
             <div class="cell small-4"><strong>Original (clean)</strong></div>
             <div class="cell small-4"><strong>Noisy Mixture (input)</strong></div>
             <div class="cell small-4"><strong>Denoised (output)</strong></div>
-            
+            <div class="cell small-4">
             <audio controls="">
                 <source src="blsh_demo/sibelius_target.wav" type="audio/wav">
                 Your browser does not support this audio format.
+            </div>
             </audio>
 
             <!-- 
