--- a/blsh.html
+++ b/blsh.html
@@ -97,8 +97,14 @@
             <audio controls="">
                 <source src="blsh_demo/sibelius_target.wav" type="audio/wav">
                 Your browser does not support this audio format.
-            </div>
             </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo/sibelius_target.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
 
             <!-- 
                 <audio src='blsh_demo/sample1_orig.wav' preload></audio>
