Added another column for test

--- a/blsh.html
+++ b/blsh.html
@@ -105,6 +105,12 @@
                 Your browser does not support this audio format.
             </audio>
             </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo/sibelius_target.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
 
             <!-- 
                 <audio src='blsh_demo/sample1_orig.wav' preload></audio>
