--- a/blsh.html
+++ b/blsh.html
@@ -111,6 +111,20 @@
                 Your browser does not support this audio format.
             </audio>
             </div>
+            <div class="cell small-4">
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample0_noisy5_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample0_pred5_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
 
             <!-- 
                 <audio src='blsh_demo/sample1_orig.wav' preload></audio>
