--- a/blsh.html
+++ b/blsh.html
@@ -125,6 +125,34 @@
                 Your browser does not support this audio format.
             </audio>
             </div>
+            <div class="cell small-4">
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample0_noisy7_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample0_pred7_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample0_noisy8_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample0_pred8_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
 
             <!-- 
                 <audio src='blsh_demo/sample1_orig.wav' preload></audio>
