Added all audio files

--- a/blsh.html
+++ b/blsh.html
@@ -139,6 +139,7 @@
                 Your browser does not support this audio format.
             </audio>
             </div>
+            <!--
             <div class="cell small-4">
             </div>
             <div class="cell small-4">
@@ -153,10 +154,55 @@
                 Your browser does not support this audio format.
             </audio>
             </div>
-
-            <!-- 
-                <audio src='blsh_demo/sample1_orig.wav' preload></audio>
             -->
+
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_orig_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_noisy0_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_pred0_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_noisy1_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_pred1_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_noisy3_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+            <div class="cell small-4">
+            <audio controls="">
+                <source src="blsh_demo_pysf/sample1_pred3_pysf.wav" type="audio/wav">
+                Your browser does not support this audio format.
+            </audio>
+            </div>
+
+
         </div>
     </article>
 
