Missing div line added

--- a/blsh.html
+++ b/blsh.html
@@ -156,6 +156,7 @@
             </div>
             -->
 
+            <div class="cell small-4">
             <audio controls="">
                 <source src="blsh_demo_pysf/sample1_orig_pysf.wav" type="audio/wav">
                 Your browser does not support this audio format.
