Trying to add text in between

--- a/blsh.html
+++ b/blsh.html
@@ -93,6 +93,11 @@
             <div class="cell small-4"><strong>Original (clean)</strong></div>
             <div class="cell small-4"><strong>Noisy Mixture (input)</strong></div>
             <div class="cell small-4"><strong>Denoised (output)</strong></div>
+        </div>
+        <p>
+        Eg. Speaker 1
+        </p>
+        <div class="grid-x grid-padding-x align-center">
             <div class="cell small-4">
             <audio controls="">
                 <source src="blsh_demo_pysf/sample0_orig_pysf.wav" type="audio/wav">
