--- a/blsh.html
+++ b/blsh.html
@@ -160,7 +160,13 @@
             </audio>
             </div>
             -->
+        </div>
 
+
+        <p>
+        Eg. Speaker 2
+        </p>
+        <div class="grid-x grid-padding-x align-center">
             <div class="cell small-4">
             <audio controls="">
                 <source src="blsh_demo_pysf/sample1_orig_pysf.wav" type="audio/wav">
