Statement added for audio examples

--- a/blsh.html
+++ b/blsh.html
@@ -78,14 +78,8 @@
                 <h3>
                     Audio examples
                 </h3>
-                <h4>
-                    Validation set
-                </h4>
                 <p>
-                First paragraph.
-                </p>
-                <p>
-                Second paragraph.
+                The following examples demonstrate the performance of the proposed denoising algorithm. The data samples presented are clean speech signals mixed with different non-stationary noises, which are then denoised by BLSH. 
                 </p>
             </div>
         </div>
