--- a/index.html
+++ b/index.html
@@ -45,16 +45,9 @@
 								<section>
 									<h2>Who are you guys?</h2>
 									<ul class="small-image-list">
-										<li>
-											<a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
-											<h4>Jane Anderson</h4>
-											<p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis.</p>
-										</li>
-										<li>
-											<a href="#"><img src="images/pic1.jpg" alt="" class="left" /></a>
-											<h4>James Doe</h4>
-											<p>Vitae magna eget odio amet mollis justo facilisis amet quis. Sed sagittis consequat.</p>
-										</li>
+											<a href="#">
+                                                <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
+                                            </a>
 									</ul>
 								</section>
 
