Making image bigger

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 								<section>
 									<h2>Who are you guys?</h2>
-									<ul class="small-image-list">
+									<ul class="big-image-list">
 										<li>
 											<a href="#">
                                                 <img src="images/sunwoo_lake_pic.jpg" alt="" class="left" />
