--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 							<div class="col-4 col-12-medium">
 
 								<section>
-									<h2>Who are you guys?</h2>
 									<ul class="big-image-list">
 										<li>
 											<a href="#">
@@ -54,7 +53,7 @@
 								</section>
 
 								<section>
-									<h2>How about some links?</h2>
+									<h2>Affiliation</h2>
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-small">
@@ -64,15 +63,6 @@
 													<li><a href="#">Quis accumsan lorem</a></li>
 													<li><a href="#">Suspendisse varius ipsum</a></li>
 													<li><a href="#">Eget et amet consequat</a></li>
-												</ul>
-											</div>
-											<div class="col-6 col-12-small">
-												<ul class="link-list">
-													<li><a href="#">Quis accumsan lorem</a></li>
-													<li><a href="#">Sed neque nisi consequat</a></li>
-													<li><a href="#">Eget et amet consequat</a></li>
-													<li><a href="#">Dapibus sed mattis blandit</a></li>
-													<li><a href="#">Vitae magna sed dolore</a></li>
 												</ul>
 											</div>
 										</div>
