--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<ul class="link-list">
-													<li><a href="#">Sed neque nisi consequat</a></li>
-													<li><a href="#">Dapibus sed mattis blandit</a></li>
-													<li><a href="#">Quis accumsan lorem</a></li>
-													<li><a href="#">Suspendisse varius ipsum</a></li>
-													<li><a href="#">Eget et amet consequat</a></li>
+													<li>PhD Student</li>
+                                                    <ul>
+													    <li><a href="#">Dapibus sed mattis blandit</a></li>
+                                                    </ul>
 												</ul>
 											</div>
 										</div>
