--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<div class="col-6 col-12-small">
 												<ul class="link-list">
 													<li>PhD Student</li>
-                                                    <ul>
+												    <ul class="link-list">
 													    <li><a href="#">Dapibus sed mattis blandit</a></li>
                                                     </ul>
 												</ul>
