Changed to list format for the news

--- a/index.html
+++ b/index.html
@@ -73,30 +73,20 @@
 
 								<section>
 									<h2>News</h2>
-                                    <p>
-                                    (1/25/2020)
-                                    </p>
-                                    <p>
+                                    <ul>
+                                        <li>
                                         Applied scientist internship offer accepted at Amazon Lab126, 2020 Summer.
-                                    </p>
-                                    <p>
-                                    (1/24/2019)
-                                    </p>
-									<p>
-                                        Our paper have been accepted to ICASSP 2020.
-                                    </p>
-                                    <p>
-                                    (5/18/2019)
-                                    </p>
-                                    <p>
-                                        Started internship at Qualcomm. 
-                                    </p>
-                                    <p>
-                                    (5/11/2019)
-                                    </p>
-                                    <p>
-                                        Attended ICASSP 2019 in Brighton, UK. Presented on binarized RNNs.
-                                    </p>
+                                        </li>
+                                        <li>
+                                        Our paper, Boosted Locality Sensitive Hashing, has been accepted to ICASSP 2020.
+                                        </li>
+                                        <li>
+                                        Interned at Qualcomm, 2019 Summer. 
+                                        </li>
+                                        <li>
+                                        Attended ICASSP 2019 in Brighton, UK. Presented on Binary RNNs.
+                                        </li>
+                                    </ul>
 								</section>
 
 							</div>
