Adding margins in between news items

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 								<section>
 									<h2>News</h2>
-                                    <ul>
+                                    <ul class="link-list-news">
                                         <li>
                                         Applied scientist internship offer accepted at Amazon Lab126, 2020 Summer.
                                         </li>
